--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ You unlock the painted green door.</p>
               </div>
             </span>
           </span>
-        </div>
+        </div> <!-- End of Rooms pane -->
 
         <!-- Objects -->
 
@@ -258,7 +258,7 @@ You unlock the painted green door.</p>
 
           </span>
 
-        </div>
+        </div> <!-- End of Objects pane -->
 
         <!-- People -->
 
@@ -340,7 +340,7 @@ You unlock the painted green door.</p>
 
           </span>
 
-        </div>
+        </div> <!-- End of People pane -->
 
         <!-- Actions -->
 
@@ -384,7 +384,6 @@ You unlock the painted green door.</p>
         </span>
 
           <span class="col-md-6">
-
           <span ng-show="actionCommand">
               <div class="well">
 
@@ -412,11 +411,18 @@ You unlock the painted green door.</p>
             </div>
             </span>
           </span>
-        </div>
+        </div> <!-- End of ng-controller -->
 
-      </div>
+      </div> <!-- End of Actions pane -->
 
-    </div>
+    </div> <!-- End of tabs -->
+
+<div class="col-md-12">
+<hr />
+<p>A simple Inform 7 generator for an IT course &middot; <a href="https://github.com/ssml-it/inform-creator">GitHub</a> &middot; <a href="http://twitter.com/kumo">@kumo</a></p>
+</div>
+
+</div> <!-- end of container -->
 
 
     <script type="text/javascript">
