Fix spacing for example verb code

--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@ You unlock the painted green door.</p>
             <span ng-hide="noTarget">
                 <p><kbd>{{commanding | uppercase}} is an action applying to one thing. Understand "{{command}} [{{target}}]" as {{commanding}}.</kbd></p>
 
-                <p><kbd>Carry out {{commanding}}:</kbd></p>
-                <p><kbd>&nbsp;&nbsp;&nbsp;say "You {{command}} [the noun] but nothing happens."</kbd></p>
+                <p><kbd>Carry out {{commanding}}:<br />
+                &nbsp;&nbsp;&nbsp;say "You try to {{command}} [the noun] but not much happens."</kbd></p>
             </span>
 
             <br />
